images added in rest of the stuff

--- a/content/blog/post0.mdx
+++ b/content/blog/post0.mdx
@@ -4,6 +4,7 @@ date: 2023-01-01
 description: Discussing the reasons and motivations behind starting a blog.
 tags: ["blogging", "motivation", "personal"]
 categories: ["writing"]
+image: "/images/posts/0.jpg"
 author: Sujal Choudhari
 ---
 
