--- a/content/blog/post1.mdx
+++ b/content/blog/post1.mdx
@@ -4,6 +4,7 @@ date: 2024-07-08
 description: Exploring the concept of enshitification and its impact on the web.
 tags: ["web", "enshitification", "internet"]
 categories: ["code"]
+image: "/images/posts/1.jpg"
 author: Sujal Choudhari
 ---
 
