--- a/content/blog/post10.mdx
+++ b/content/blog/post10.mdx
@@ -4,6 +4,7 @@ date: 2024-07-10
 description: Strategies to break free from the endless cycle of tutorials and start building projects.
 tags: ["tutorial hell", "projects", "learning"]
 author: Sujal Choudhari
+image: "/images/posts/10.jpg"
 categories: ["code", "book"]
 ---
 
