--- a/content/blog/post11.mdx
+++ b/content/blog/post11.mdx
@@ -3,6 +3,7 @@ title: How to Code Any Feature
 date: 2024-07-10
 description: Book summary exploring the limitations and challenges of current AI systems.
 tags: ["AI", "limitations", "challenges"]
+image: "/images/posts/11.jpg"
 author: Sujal Choudhari
 categories: ["code", "book", "tips"]
 ---
