--- a/content/blog/post12.mdx
+++ b/content/blog/post12.mdx
@@ -5,6 +5,7 @@ description: Analyzing the limitations and challenges of current AI systems.
 tags: ["AI", "limitations", "challenges"]
 author: Sujal Choudhari
 categories: ["code", "book"]
+image: "/images/posts/12.jpg"
 ---
 
 # The Vital Role of Human Logic in Coding, Enhancing AI Capabilities
