--- a/content/blog/post13.mdx
+++ b/content/blog/post13.mdx
@@ -4,6 +4,7 @@ date: 2024-07-10
 description: Understanding the importance of design patterns and SOLID principles in software development.
 tags: ["design patterns", "SOLID principles", "software development"]
 author: Sujal Choudhari
+image: "/images/posts/13.jpg"
 categories: ["code"]
 ---
 
