--- a/content/blog/post14.mdx
+++ b/content/blog/post14.mdx
@@ -4,6 +4,7 @@ date: 2024-07-10
 description: Discussing the importance of data structures and algorithms in efficient programming.
 tags: ["data structures", "algorithms", "programming"]
 author: Sujal Choudhari
+image: "/images/posts/14.jpg"
 categories: ["code", "tips"]
 ---
 
