--- a/content/blog/post3.mdx
+++ b/content/blog/post3.mdx
@@ -4,6 +4,7 @@ date: 2023-12-30
 description: Sharing the experience and success at Smart India Hackathon 2023.
 tags: ["SIH23", "hackathon", "success story"]
 author: Sujal Choudhari
+image: "/images/posts/3.jpg"
 categories: ["hackathon", "wins"]
 ---
 
