--- a/content/blog/post4.mdx
+++ b/content/blog/post4.mdx
@@ -3,6 +3,7 @@ title: First Book Coding Mastery
 date: 2024-01-10
 description: Announcing the release of my first book on coding mastery.
 tags: ["book release", "coding", "mastery"]
+image: "/images/posts/4.jpg"
 author: Sujal Choudhari
 categories: ["book"]
 ---
