--- a/content/blog/post6.mdx
+++ b/content/blog/post6.mdx
@@ -1,6 +1,7 @@
 ---
 title: Winning Buildathon LLM
 date: 2024-04-23
+image: "/images/posts/6.jpg"
 description: Detailing the strategies and efforts that led to winning Buildathon LLM.
 tags: ["Buildathon", "LLM", "winning strategies"]
 author: Sujal Choudhari
