--- a/content/blog/post7.mdx
+++ b/content/blog/post7.mdx
@@ -4,6 +4,7 @@ date: 2024-05-05
 description: Reflecting on the honor of receiving the Sanman Chinh award.
 tags: ["Sanman Chinh", "award", "recognition"]
 categories: ["wins"]
+image: "/images/posts/7.jpg"
 author: Sujal Choudhari
 ---
 
