--- a/content/blog/post8.mdx
+++ b/content/blog/post8.mdx
@@ -5,6 +5,7 @@ description: Discussing the benefits and insights gained from reinventing the wh
 tags: ["reinventing wheel", "coding", "learning"]
 author: Sujal Choudhari
 categories: ["code"]
+image: "/images/posts/8.jpg"
 ---
 
 # The Value of Reinventing the Wheel in Technology
