--- a/content/blog/post2.mdx
+++ b/content/blog/post2.mdx
@@ -4,6 +4,7 @@ date: 2024-07-09
 description: Celebrating achievements and contributions during Hacktoberfest.
 tags: ["Hacktoberfest", "open source", "community"]
 categories: ["code"]
+image: "/images/posts/2.jpg"
 author: Sujal Choudhari
 ---
 
