--- a/content/blog/post5.mdx
+++ b/content/blog/post5.mdx
@@ -4,6 +4,7 @@ date: 2024-02-21
 description: Recounting the journey and experiences at a hackathon in Mumbai.
 tags: ["hackathon", "Mumbai", "experience"]
 author: Sujal Choudhari
+image: "/images/posts/5.jpg"
 categories: ["hackathon"]
 ---
 
