--- a/content/blog/post9.mdx
+++ b/content/blog/post9.mdx
@@ -4,6 +4,7 @@ date: 2024-07-09
 description: Exploring advanced rendering techniques for coding mastery.
 tags: ["coding", "rendering", "advanced techniques"]
 author: Sujal Choudhari
+image: "/images/posts/9.jpg"
 categories: ["book"]
 ---
 
