--- a/content/blog/post33.mdx
+++ b/content/blog/post33.mdx
@@ -77,27 +77,47 @@ Even tried non-tech events, where I quickly discovered that wasn't my strongest 
 > The point isn't just to do everything; it's to do everything that adds value to your growth.
 
 You have to experience it once, and if you feel it will not add value to you quit it.
-Example, I felt College Committees would not add any value to me, and doing personal low level projects instead will help me learn better, for me time to knowledge ratio was the decision factor, like I already spend 4 hours just traveling back and forth to college.
+Example, I felt College Committees would not add any value to me, and doing personal low level projects instead will help me learn better, for me time to knowledge Saraho was the decision factor, like I already spend 4 hours just traveling back and forth to college.
 Add committee work and event management on top of that?
 No thanks.
 That time is way better spent building something meaningful.
 
-## The Aura Factor
+## The Value Equation: Actual vs. Perceived
 
-Here's something that often gets overlooked: your **aura**.
-It’s not just about technical chops — it’s also about the vibe you give off.  
+One crucial concept that often goes unnoticed is the balance between **actual value (AV)**—your skills—and **perceived value (PV)**—how others view your capabilities. Ideally, both align. But in reality, they often don’t.  
+
+When your **perceived value is lower** than your actual value, you risk being overlooked despite your skills—this is when you need to **market yourself better**. When **AV equals PV**, you’re accurately recognized for your abilities—but you still need to consistently showcase your value.  
+
+However, the most interesting dynamic occurs when **perceived value exceeds actual value**. This isn’t about faking expertise—it’s about **demonstrating potential**. When people believe you can deliver, and you commit to learning and following through, you open doors to new opportunities.  
+
+Here’s a breakdown of how actual value and perceived value interact:
+
+| **Scenario**                 | **Actual Value (AV)**                     | **Perceived Value (PV)**                   | **Outcome**                                                |
+|-----------------------------|-------------------------------------------|--------------------------------------------|------------------------------------------------------------|
+| **AV < PV**                 | Skills are still developing                | Seen as highly capable and adaptable       | Opens doors to opportunities; must work hard to deliver     |
+| **AV = PV**                 | Skills and abilities match the perception  | Seen accurately for what you bring        | Steady progress; requires continuous visibility and effort  |
+| **AV > PV**                 | Highly skilled and competent               | Undervalued or underestimated             | Missed opportunities unless you improve self-presentation   |
+
+**PV > AV** is good and should be aimed for—when people perceive you as capable, you gain access to more opportunities. However, **PV >>>>> AV** can become risky if the gap is too large—eventually, people will expect you to deliver at the level they perceive.
+
+Consider a hypothetical example: **Sarah** (definitely not a real person). She wasn’t a coder by training, but she excelled at presenting herself. During internship season, both of us aimed for the same company. While I—despite having stronger coding skills—couldn’t secure an interview, Sarah landed a tech internship.  
+
+Why? **Perceived value.**  
+
+Sarah networked confidently, asked insightful questions, and radiated a “fast learner, eager contributor” attitude. Even though her technical skills were still developing, she **made the interviewers believe she could grow into the role**—and then worked hard to deliver on that promise.  
+
+![Drama Mask](/images/posts/drama_mask.jpg)
+
+Here’s how our value equation compared:
+
+| **Person** | **Actual Value (AV)**                     | **Perceived Value (PV)**                   | **Result**                                                 |
+|------------|-------------------------------------------|--------------------------------------------|------------------------------------------------------------|
+| **Me**     | Strong coding skills                      | Limited—struggled to showcase them        | Couldn’t land an interview                                 |
+| **Sarah**  | Basic coding knowledge, strong presentation | High—networked, asked smart questions      | Secured a tech internship through confidence and potential  |
+
+**The takeaway?** When you align **perceived potential** with **actual effort**, you create room for growth and opportunity. By understanding and managing this equation, you can open doors that skill alone might not unlock.
 
 
-![Aura](/images/posts/aura.jpg)
-
-Let me tell you about Rati *(name changed)*.
-Although she wasn’t a coder by trade, she had an incredible knack for presenting herself.
-During internship season, both of us had our eyes on the same company.
-Here's the kicker — I couldn’t even land an interview, while she nailed a tech internship.  
-  
-It wasn’t just about skills;
-it was about the aura you projected.
-In those early days, your perceived aura — that **"I’ve got it"** vibe — is just as important as your actual abilities.
 
 ## The GitHub Graveyard
 
