improved writing and updated search

--- a/content/blog/post33.mdx
+++ b/content/blog/post33.mdx
@@ -196,10 +196,12 @@ In a world where jobs are fluid and even the person who hired you might be repla
 Being a generalist who helps specialists is incredibly rewarding. 
 
 Take few months back.  
-Chinmayee from Economics background needed to get some data for research, some code was required to extract the data from source.
+Chinmayee from Economics background needed to get some data for research.
+She required some code to extract the data from source.
 It took me just 15 minutes to write the script and around 1 hour to clean everything up.  
-She got her data and finished her paper. 
-But what did I get?
+She got her data and finished her paper.  
+
+But what did I get?  
 I learnt about a new dataset that somehow was missed from my radar, and now *it became my go to source of certain type of data*.
 
 But it goes deeper.  
@@ -210,8 +212,10 @@ That breakthrough not only fixed my model but also for some *other project got m
 
 ![Shake Hands](/images/posts/shake_hands.jpg)
 
-
-Asking for help teaches you a lot, for you it is better to ask for help from peers, they can distill down the content just for you, as they know you and your mindset.
+Asking for help teaches you a lot.
+For you it is better to ask for help from peers.
+Peers, who can distill down the content just for you.
+They know you and your mindset.
 Not just asking for help, but, helping others teaches you a lot of things too.
 Helping specialists pushes you out of your comfort zone and unlocks doors to new opportunities, transforming every act of assistance into a step toward bigger growth.
 
