Updates in blog and portfolio

--- a/content/blog/post33.mdx
+++ b/content/blog/post33.mdx
@@ -196,7 +196,7 @@ In a world where jobs are fluid and even the person who hired you might be repla
 Being a generalist who helps specialists is incredibly rewarding. 
 
 Take few months back.  
-Chinmayee from Economics background needed to get some data for research.
+Maya from Economics background needed to get some data for research.
 She required some code to extract the data from source.
 It took me just 15 minutes to write the script and around 1 hour to clean everything up.  
 She got her data and finished her paper.  
@@ -206,7 +206,7 @@ I learnt about a new dataset that somehow was missed from my radar, and now *it 
 
 But it goes deeper.  
 The other day, I was frustrated with my ML model showing an MSE in the **10e4** range.
-I reached out to Surabhi.
+I reached out to Pari.
 She introduced me to the concept of normalizing values within a comfortable range.
 That breakthrough not only fixed my model but also for some *other project got me selected for an ML competition at IIT Banaras* — and remember, I'm not even a ML guy!
 
