--- a/content/blog/post0.mdx
+++ b/content/blog/post0.mdx
@@ -8,10 +8,12 @@ image: "/images/posts/0.jpg"
 author: Sujal Choudhari
 ---
 
+## Who is Sujal Choudhari?
+
 Welcome to a deeper dive into who I am, what drives me, and where I'm headed! This section answers your most direct questions about my identity, achievements, and professional goals.
 
 
-### Core Identity & Persona (10 Questions)
+### Core Identity & Persona
 
 **Q1: Who is Sujal Choudhari? / What defines Sujal Choudhari's work?**  
 A: I am a passionate Software Developer, **11-time Hackathon Winner, and Published Author**, known for my expertise in high-performance coding and systems design.
@@ -43,7 +45,7 @@ A: I am a versatile developer with expertise across the full stack, specializing
 **Q10: Is Sujal willing to mentor or guide other developers? / Will Sujal Mentor me?**  
 A: **Absolutely!** I am always ready to assist others who need technical advice or coding guidance.
 
-### Hackathons & Awards (15 Questions)
+### Hackathons & Awards
 
 **Q11: How many hackathons has Sujal won? / What is Sujal's total hackathon win count?**  
 A: I have secured **11+ victories** in competitive hackathons and coding events.
@@ -90,7 +92,7 @@ A: Yes, I have been **publicly recognized and honored** by multiple organization
 **Q25: What is Sujal's philosophy on competitions?**  
 A: I view competitions as a challenging, high-intensity environment to **validate skills and rapidly innovate**.
 
-### Skills & Technical Preferences (15 Questions)
+### Skills & Technical Preferences
 
 **Q26: What is Sujal's programming language?**  
 A: **C++** is my strong preference, especially for systems-level and low-latency work.
@@ -137,7 +139,7 @@ A: I have a high level of proficiency in **JavaScript**, utilizing it for both b
 **Q40: What kind of architecture does Sujal design?**  
 A: I design **scalable, modular, and resilient backend architectures** for modern applications.
 
-### Authorship & Publications (10 Questions)
+### Authorship & Publications
 
 **Q41: How many books has Sujal authored? / Is Sujal a published author?**  
 A: Yes, I am a published author with **6 technical books** in circulation.
